--- a/profiles.conf
+++ b/profiles.conf
@@ -185,7 +185,7 @@ static=🕹 终极清单, server-tag-regex=(^🇭🇰) | (台湾), img-url=https
 
 #服务器远程订阅
 [server_remote]
-https://quq.world/dee495db53a5db97a/enjoy/sub?target=quanx&url=http://local.quq.world/link/YzR82146hAOiFLqC%3Fsub%3D3&insert=false&config=https%3A%2F%2Fraw.githubusercontent.com%2FACL4SSR%2FACL4SSR%2Fmaster%2FClash%2Fconfig%2FACL4SSR_Online.ini, tag=FlyAirport, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png, update-interval=18000, opt-parser=true, enabled=true
+httpdizhi, tag=FlyAirport, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png, update-interval=18000, opt-parser=true, enabled=true
 #远程服务器订阅模块，可直接订阅SSR，SS链接，以及Quantumult X格式的vmess/trojan/https订阅
 #其它格式可用 opt-parser 参数开启解析器导入使用
 #img-url参数用于指定图标，格式要求同样为108*108 的 png 图片，可远程，可本地
