--- a/APP.conf
+++ b/APP.conf
@@ -9,5 +9,25 @@
 # hostname = mobile.flightradar24.com
 ^https:\/\/mobile\.flightradar24\.com\/mobile\/(user-session|subscribe) url script-response-body https://raw.githubusercontent.com/Yu9191/Rewrite/main/Flightradar24.js
 
+#************************************#
+# 阿里云盘 净化/解锁SVIP
+# hostname = *.aliyundrive.com, *.alipan.com
+^https?:\/\/(api|member)\.(aliyundrive|alipan)\.com\/(.+\/(users|activity|user\/get)|((business|apps)\/.+\/users|adrive\/.+\/user)) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/alidrive.js
 
-hostname = *.api.moji.com, mobile.flightradar24.com
+#************************************#
+# 扫描全能王
+# hostname = *.camscanner.com, *.intsig.net
+^https?:\/\/.*\.(intsig\.net|camscanner\.com) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/CamScanner.js
+
+#************************************#
+# 薄荷健康
+# hostname = api.boohee.com
+^https?:\/\/api\.boohee\.com\/app-interface\/.+\/user\/user_info url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/bohejiankang.js
+
+#************************************#
+# WPS Office
+# hostname = *.wps.cn
+^https?:\/\/(vas|account|drive)\.wps\.cn\/(query\/api\/.+\/list_purchase_info|api\/(v\d\/spaces|users\/.+\/overview)) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/WPS.js
+
+
+hostname = *.api.moji.com, mobile.flightradar24.com, *.aliyundrive.com, *.alipan.com, *.camscanner.com, *.intsig.net, api.boohee.com, *.wps.cn
