--- a/APP.conf
+++ b/APP.conf
@@ -29,5 +29,9 @@
 # hostname = *.wps.cn
 ^https?:\/\/(vas|account|drive)\.wps\.cn\/(query\/api\/.+\/list_purchase_info|api\/(v\d\/spaces|users\/.+\/overview)) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/WPS.js
 
+#************************************#
+# 酷我会员
+# hostname =vip1.kuwo.cn
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 
-hostname = *.api.moji.com, mobile.flightradar24.com, *.aliyundrive.com, *.alipan.com, *.camscanner.com, *.intsig.net, api.boohee.com, *.wps.cn
+hostname = *.api.moji.com, mobile.flightradar24.com, *.aliyundrive.com, *.alipan.com, *.camscanner.com, *.intsig.net, api.boohee.com, *.wps.cn, vip1.kuwo.cn
